--- a/templates/jsdoc2/class.tmpl
+++ b/templates/jsdoc2/class.tmpl
@@ -254,7 +254,7 @@ else {
         </for>
       </dl>
     </if>
-    <if test="member.returns.length">
+    <if test="member.returns && member.returns.length">
       <dl class="detailList"><dt class="heading">Returns:</dt>
         <for each="item" in="member.returns"><dd>{+((item.type)?"<span class=\"light fixedFont\">{"+(new Link().toSymbol(item.type))+"}</span> " : "")+}{+resolveLinks(item.desc)+}</dd></for>
       </dl>
