--- a/templates/jsdoc2/class.tmpl
+++ b/templates/jsdoc2/class.tmpl
@@ -32,6 +32,7 @@ else {
 <!-- ============================== class summary ========================== -->
 <p class="description">
   {+data.desc+}
+  <if test="data.example && data.example.length"><for each="example" in="data.example"><pre class="code">{+example.desc+}</pre></for></if>
   <if test="data.augments.length">
     <br />Extends {+data.augments.sort().map(function($) { return new Link().toSymbol($); }).join(", ")+}.<br />
   </if>
@@ -136,7 +137,7 @@ else {
             </td>
             <td class="nameDescription">
               <div class="fixedFont"><if test="member.isStatic && member.memberOf != '_global_'">{+member.memberOf+}.</if>
-                <b>{+new Link().toSymbol(member.alias).withText(member.name || member._name)+}</b><if test="!member.isField">{+makeSignature(member.params || member._params)+}</if>
+                <b>{+anonClassLink(member.name || member._name)+}</b><if test="!member.isField">{+makeSignature(member.params || member._params)+}</if>
               </div>
               <div class="description">{+resolveLinks(summarize(member.desc))+}</div>
             </td>
@@ -223,7 +224,7 @@ else {
 <if test="ownAnon && ownAnon.length">
   <div class="sectionTitle">Entities Exposed to JavaScript Detail</div>
   <for each="member" in="ownAnon">
-    <a name="{+Link.symbolNameToLinkName(member)+}"> </a>
+    <a name="{+anonClassAnchor(member._name || member.name)+}"> </a>
     <div class="fixedFont">{! if (member.isPrivate) output += "&lt;private&gt; "; if (member.isInner) output += "&lt;inner&gt; "; if (member.isStatic) output += "&lt;static&gt; "; !}
       <if test="member.type"><span class="light">{{+new Link().toSymbol(member.type)+}}</span></if>
       <if test="member.isStatic && member.memberOf != '_global_'"><span class="light">{+member.memberOf+}.</span></if><b>{+member.name || member._name+}</b><if test="!member.isField">{+makeSignature(member.params || member._params)+}</if>
