--- a/templates/jsdoc2/class.tmpl
+++ b/templates/jsdoc2/class.tmpl
@@ -1,5 +1,3 @@
-<br />
-<div id="content">
 <!-- ============================== class title ============================ -->
   <h1 class="classTitle">{!
 var classType = "";
@@ -32,7 +30,7 @@ else {
 <!-- ============================== class summary ========================== -->
 <p class="description">
   {+data.desc+}
-  <if test="data.example && data.example.length"><for each="example" in="data.example"><pre class="code">{+example.desc+}</pre></for></if>
+  <if test="data.example && data.example.length"><for each="example" in="data.example"><pre class="code">{+example+}</pre></for></if>
   <if test="data.augments.length">
     <br />Extends {+data.augments.sort().map(function($) { return new Link().toSymbol($); }).join(", ")+}.<br />
   </if>
@@ -268,4 +266,4 @@ else {
     <if test="!$member_last"><hr /></if>
   </for>
 </if>
-</div>
+
